adding delete icon

--- a/KalenderApp/src/index.css
+++ b/KalenderApp/src/index.css
@@ -51,3 +51,9 @@
   padding: 10px 20px;
   cursor: pointer;
 }
+
+.task h3 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
