--- a/KalenderApp/src/index.css
+++ b/KalenderApp/src/index.css
@@ -1,3 +1,5 @@
+/* Set global font and color styles */
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -13,6 +15,8 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+/* Set styles for the main app container */
 
 .App {
   max-width: 500px;
